Wed Jan 19 02:40:27 2000  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.in: volume_io needs -lm on IRIX.

	* configure.in: search -lnetcdf for `ncopen' rather than
	`nc_open', as the latter does not appear in NetCDF 2.3.

	* configure.in: remove AC_PROG_RANLIB; rendered obsolete by
	AM_PROG_LIBTOOL.

	* */.cvsignore
	* AUTHORS
	* ChangeLog
	* */Makefile.am
	* NEWS
	* README
	* acinclude.m4
	* configure.in: new.  Set up for automake, autoconf, and libtool.

	* version.c: new.  It seems that libtool requires at least one
	real object file in a library to be happy.