@@ -45,7 +45,7 @@ AUTOCONF = autoconf
 AUTOMAKE = automake
 AUTOHEADER = autoheader
 
-INSTALL = /usr/bin/install -c
+INSTALL = '/usr/bin/install -c'
 INSTALL_PROGRAM = ${INSTALL} $(AM_INSTALL_PROGRAM_FLAGS)
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_SCRIPT = ${INSTALL_PROGRAM}
@@ -64,9 +64,9 @@ CC = gcc
 DLLTOOL = @DLLTOOL@
 LD = /usr/bin/ld
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
-LN_S = ln -s
+LN_S = 'ln -s'
 MAKEINFO = makeinfo
-NM = /usr/bin/nm -B
+NM = '/usr/bin/nm -B'
 OBJDUMP = @OBJDUMP@
 PACKAGE = bicpl
 RANLIB = ranlib
